# Folunar_

./: .gitignore  Dockerfile  Dockerfile.local  Dockerfile.offline  Dockerfile.sandbox  README.md  config.example.yaml  config.yaml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: ci.yml
Idle/: agents.md  copilot.md  summary.md
config/: config.yaml
data/: test_vocabulary.json  vocabulary.json
plans/: ai-os-feasibility-report.md
scripts/: auto_login.yaml  run-compose.ps1  run-compose.sh  run-local.ps1  run-local.sh
src/: app.py  auth.py  container_audit.py  container_manager.py  decision_engine.py  initialization.py  observer.py  security_middleware.py  validation.py  whisper_injection.py
src/adb_agent_controller/: __init__.py  ai.py  cli.py  config.py  memory.py  scripts.py
src/api/: __init__.py  auth.py  container.py  decision.py  observer.py  system.py  whisper.py
src/core/: __init__.py  agent_manager.py  cache_manager.py  connection_pool.py  error_handler.py  performance_monitor.py
static/: chat.js  index.html  styles.css
tests/: conftest.py  test_agent_manager.py  test_closed_loop_integration.py  test_container_manager.py  test_container_security.py  test_integration.py
