[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-container"
version = "0.1.0"
description = "Agent Container Project"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pyyaml==6.0.1",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "requests==2.31.0",
    "python-multipart==0.0.6",
    "openai==1.3.0",
]
requires-python = ">=3.8"