[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-container"
version = "0.1.0"
description = "Agent Container Project"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pyyaml==6.0.1",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "requests==2.31.0",
    "python-multipart==0.0.6",
    "openai==1.3.0",
    "psutil==5.9.6",
    "redis==5.0.1",
    "aioredis==1.3.1",
    "aiohttp==3.13.2",
    "gunicorn==21.2.0",
    "slowapi==0.1.9",
    "docker==6.1.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]==2.12.5",
    "cryptography==41.0.7",
    "pyautogui==0.9.54",
    "Pillow==12.0.0",
    "schedule==1.2.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
]
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"